--- a/pom.xml
+++ b/pom.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>es.us.psg2</groupId>
-	<artifactId>spring-petclinic.psg2.2324-G3-33</artifactId>
-	<version>1.0.0</version>
+	<groupId>org.springframework.samples</groupId>
+	<artifactId>spring-petclinic-psg2</artifactId>
+	<version>2.2.0.2324</version>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>3.1.1</version>
 	</parent>
-	<name>PSG2-2324-G3-33 Petclinic</name>
+	<name>PetClinic React</name>
 
 	<developers>
 		<developer>
