--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>3.1.1</version>
 	</parent>
-	<name>PetClinic React</name>
+	<name>PSG2-2324-G3-33 Petclinic</name>
 
 	<developers>
 		<developer>
