--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,7 +26,8 @@
     "reactstrap": "^9.1.6",
     "sonarqube-scanner": "^3.3.0",
     "swagger-ui-react": "^4.18.3",
-    "web-vitals": "^3.1.1"
+    "web-vitals": "^3.1.1",
+    "pricing4react": "^2.0.0"
   },
   "devDependencies": {
     "identity-obj-proxy": "^3.0.0",
