--- a/pom.xml
+++ b/pom.xml
@@ -193,6 +193,13 @@
   			<artifactId>maven-model</artifactId>
   			<version>3.9.4</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/io.github.isa-group/Pricing4Java -->
+		<dependency>
+			<groupId>io.github.isa-group</groupId>
+			<artifactId>Pricing4Java</artifactId>
+			<version>3.2.0</version>
+		</dependency>
+
 
  </dependencies>
 
